fixed forecast scrolling on mobile devices, fixed centering of weather elements, added footer

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,10 +15,6 @@ body {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background: #15155c;
   color: #fff;
   text-align: center;
@@ -78,10 +74,14 @@ h2 {
 }
 .data-container {
   display: flex;
-  gap: 50px;
+  align-items: center;
+  justify-content: center;
 }
 .primary-data {
   position: relative;
+}
+.secondary-data {
+  min-width: 300px;
 }
 .primary-data,
 .secondary-data {
@@ -131,12 +131,28 @@ h2 {
   box-shadow: inset 0 0 0 4px #eee;
   /* And so on and so forth, if you want border-ception */
   margin: 0 auto;
-  position: relative;
   border-radius: 3em 3em;
 }
 .forecast-box img {
   min-height: 150px;
   min-width: 150px;
+}
+.footer {
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  width: 100vw;
+  background-color: #28282b;
+  color: #fff;
+  height: 30px;
+  font-size: 17px;
+}
+.footer a {
+  text-decoration: none;
+  color: white;
+}
+.footer a:hover {
+  color: #00b4cc;
 }
 
 @media (max-width: 768px) {
@@ -144,7 +160,7 @@ h2 {
     display: flex;
     flex-direction: column;
     margin-top: -10px;
-    gap: 10px;
+    gap: 5px;
   }
   .city {
     top: 10px;
@@ -158,17 +174,36 @@ h2 {
     max-width: 200px;
     max-height: 200px;
   }
+  .primary-data {
+    margin-top: -10px;
+  }
   .secondary-data {
+    margin-top: -35px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     font-size: 12px;
+    min-width: 600px;
   }
   .temperature img,
   .humidity img,
   .wind-speed img {
-    max-width: 30px;
-    max-height: 30px;
+    max-width: 45px;
+    max-height: 45px;
+  }
+  .forecast {
+    display: flex;
+    align-items: center;
+    justify-content: unset;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    margin-top: 20px;
+  }
+  .forecast .loader {
+    margin: 0 auto;
+  }
+  .forecast-box {
+    flex: 0 0 auto;
   }
 }
